--- a/_header.scss
+++ b/_header.scss
@@ -33,46 +33,6 @@
 }
 
 @media screen and (min-width: 1024px) {
-    //     .intro__image {
-    //         display: unset;
-    //     }
-
-    //     margin: 3rem 11.5rem;
-    //     display: grid;
-    //     grid-template-areas: "name image"
-    //     "occupation image";
-    //     grid-gap: 1rem;
-
-    //     .intro {
-    //         display: grid;
-    //         grid-template-areas:
-    //             "name image"
-    //             "occupation image";
-    //         // grid-gap: 20rem;
-    //     }
-
-    //     .intro__image {
-    //         grid-area: image;
-    //         width: 30rem;
-
-    //     }
-
-    //     .intro__name {
-    //         grid-area: name;
-    //         text-align: start;
-    //         display: flex;
-    //         align-items: flex-end;
-    //         font-size: 2rem;
-
-    //     }
-
-    //     .intro__occupation {
-    //         grid-area: occupation;
-    //         font-size: 4rem;
-    //         padding: 0 15rem 0 0;
-    //         text-align: left;
-    //     }
-    // }
 
     .intro {
         display: flex;
@@ -80,8 +40,8 @@
         justify-content: center;
         align-items: center;
         margin: auto;
-        width: 100rem;
-        height: 50rem;
+        width: 95%;
+        height: 80vh;
         background-color: $foreground-color;
         text-align: center;
 
@@ -128,28 +88,3 @@
         }
     }
 }
-
-
-
-
-
-//     header {
-//         display: grid;
-//         grid-template-areas:
-//             "name image"
-//             "occupation image";
-//         grid-gap: 1rem;
-//     }
-
-//     .intro__image {
-//         display: unset;
-//         grid-area: image;
-//     }
-//     .intro__name {
-//         grid-area: name;
-//     }
-//     .intro__occupation {
-//         grid-area: occupation;
-//     }
-
-// }
